[gd_scene load_steps=21 format=3 uid="uid://dmllnf4rhqqs3"]

[ext_resource type="Shader" path="res://sprites/crt.gdshader" id="1_3vo1h"]
[ext_resource type="Script" path="res://scripts/windows95.gd" id="1_ed1cj"]
[ext_resource type="FontFile" uid="uid://vneqrsab2dtf" path="res://sprites/Battlenet.ttf" id="1_sfs6i"]
[ext_resource type="Texture2D" uid="uid://3p4w03sv5xnn" path="res://sprites/PatchRegular.png" id="2_yvt6y"]
[ext_resource type="Texture2D" uid="uid://bgxoxahor34bd" path="res://sprites/PatchInverted.png" id="3_dvwiq"]
[ext_resource type="Texture2D" uid="uid://dvr3th8tqoxdu" path="res://sprites/Flag.png" id="4_uun0y"]
[ext_resource type="Texture2D" uid="uid://dtl7c4tu6c4pj" path="res://sprites/CloseRegular.png" id="5_titud"]
[ext_resource type="Script" path="res://sprites/Time Panel.gd" id="5_vxqoj"]
[ext_resource type="Texture2D" uid="uid://h1khqvjhtr3j" path="res://sprites/ClosePressed.png" id="6_waunn"]
[ext_resource type="Texture2D" uid="uid://bs5r41pjpf7rp" path="res://sprites/198645-200.png" id="9_lnker"]
[ext_resource type="Texture2D" uid="uid://bdwohx0ykdbfj" path="res://sprites/32743.png" id="10_100e6"]
[ext_resource type="Texture2D" uid="uid://dqhn36ajk08q2" path="res://sprites/pc-game-icon-22.png" id="11_lhjqe"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pa50r"]
bg_color = Color(0.695503, 0.695503, 0.695503, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sw66v"]
draw_center = false
border_width_top = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vywgp"]
texture = ExtResource("3_dvwiq")
texture_margin_left = 1.0
texture_margin_top = 1.0
texture_margin_right = 1.0
texture_margin_bottom = 1.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_a8vru"]
texture = ExtResource("2_yvt6y")
texture_margin_left = 1.0
texture_margin_top = 1.0
texture_margin_right = 1.0
texture_margin_bottom = 1.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_df2sy"]
texture = ExtResource("3_dvwiq")
texture_margin_left = 1.0
texture_margin_top = 1.0
texture_margin_right = 1.0
texture_margin_bottom = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_to17k"]
font = ExtResource("1_sfs6i")
font_size = 50
font_color = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ir0li"]
shader = ExtResource("1_3vo1h")
shader_parameter/crt_curve = 0.005
shader_parameter/crt_scan_line_color = 0.0
shader_parameter/aperture_grille_rate = 0.469
shader_parameter/aparture_grille_cut_rate = 0.473
shader_parameter/rf_switch_esque_blur = 1.0
shader_parameter/white_noise_rate = 0.0

[sub_resource type="LabelSettings" id="LabelSettings_m2xbo"]
font = ExtResource("1_sfs6i")
font_size = 32

[node name="WindowsDesktop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ed1cj")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.532846, 0.515367, 1)

[node name="Window" type="Window" parent="."]
title = "Pop"
initial_position = 2
size = Vector2i(700, 500)
visible = false
theme_override_constants/resize_margin = 5
theme_override_fonts/title_font = ExtResource("1_sfs6i")
theme_override_icons/close = ExtResource("5_titud")
theme_override_icons/close_pressed = ExtResource("6_waunn")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -67.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_pa50r")

[node name="Panel" type="Panel" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 3.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_sw66v")

[node name="Start" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 5.0
offset_top = 10.0
offset_right = 131.0
offset_bottom = 62.0
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_sfs6i")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxTexture_vywgp")
theme_override_styles/pressed = SubResource("StyleBoxTexture_vywgp")
theme_override_styles/normal = SubResource("StyleBoxTexture_a8vru")
keep_pressed_outside = true
text = "Start"
icon = ExtResource("4_uun0y")
expand_icon = true

[node name="Time Panel" type="Panel" parent="Panel"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -117.0
offset_top = 9.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_df2sy")
script = ExtResource("5_vxqoj")

[node name="Time" type="Label" parent="Panel/Time Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_to17k")

[node name="ligacao" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 16.0
offset_right = 119.0
offset_bottom = 105.0
texture_normal = ExtResource("9_lnker")
texture_pressed = ExtResource("9_lnker")
texture_hover = ExtResource("9_lnker")
texture_disabled = ExtResource("9_lnker")
texture_focused = ExtResource("9_lnker")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureButton2" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 43.0
offset_top = 141.0
offset_right = 107.0
offset_bottom = 207.0
texture_normal = ExtResource("10_100e6")
texture_pressed = ExtResource("10_100e6")
texture_hover = ExtResource("10_100e6")
texture_disabled = ExtResource("10_100e6")
texture_focused = ExtResource("10_100e6")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureButton3" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 252.0
offset_right = 109.0
offset_bottom = 331.0
texture_normal = ExtResource("11_lhjqe")
texture_pressed = ExtResource("11_lhjqe")
texture_hover = ExtResource("11_lhjqe")
texture_disabled = ExtResource("11_lhjqe")
texture_focused = ExtResource("11_lhjqe")
ignore_texture_size = true
stretch_mode = 0

[node name="ColorRect2" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_ir0li")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Panel2" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 191.0
offset_top = 446.0
offset_right = 954.0
offset_bottom = 543.0

[node name="Label" type="Label" parent="Panel2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -336.0
offset_top = -14.0
offset_right = 336.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
text = "Acho que essas foram todas as ligações, melhor ir desligar o pc"
label_settings = SubResource("LabelSettings_m2xbo")

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="Panel/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="ligacao" to="." method="_on_ligacao_pressed"]
